<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">

        <item android:id="@+id/item_book_home"
            android:icon="@drawable/home"
            android:title="@string/home"/>

        <item android:id="@+id/item_book_ride"
            android:icon="@drawable/book_ride_icon"
            android:title="@string/menu_book_ride"/>

        <item android:id="@+id/item_booking_status"
            android:icon="@drawable/booking_status_icon"
            android:title="@string/menu_booking_status"/>

        <item android:id="@+id/item_my_profile"
            android:icon="@drawable/my_profile_icon"
            android:title="@string/menu_my_profile"/>

        <item android:id="@+id/item_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings"/>

        <item android:id="@+id/item_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout"/>

    </group>
</menu>