<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.SplashActivity">

    <ImageView
        android:contentDescription="@string/logo_image"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/tag_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_small"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_developed_by"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_small"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_developer"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>