<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.pikchillytechnologies.tagtaxiservice.activity.MyProfileActivity"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_Toolbar"
            layout="@layout/toolbar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button_Save"
            android:layout_below="@id/layout_Toolbar"
            android:background="@color/colorPrimary"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_lar"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="@dimen/card_radius"
                    app:cardElevation="@dimen/card_elevation">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/green_bg" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_lar"
                        android:layout_marginLeft="@dimen/margin_lar"
                        android:layout_marginTop="@dimen/margin_vlar"
                        android:layout_marginEnd="@dimen/margin_lar"
                        android:layout_marginRight="@dimen/margin_lar"
                        android:layout_marginBottom="@dimen/margin_lar"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_User_Image"
                            android:layout_width="@dimen/user_image_width"
                            android:layout_height="@dimen/user_image_height"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/margin_lar"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:contentDescription="@string/navi_user_image"
                            android:src="@drawable/my_profile_icon" />

                        <TextView
                            android:id="@+id/textView_UploadPhoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/upload_photo"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_small" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/textView_UserName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_small"
                                android:hint="@string/name_hint"
                                android:inputType="text"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_med" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/textView_Phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_small"
                                android:enabled="false"
                                android:hint="@string/phone_hint"
                                android:inputType="phone"
                                android:maxLength="13"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="@dimen/text_med" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/textView_Gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_small"
                                android:hint="@string/gender_hint"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_med" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/textView_EmailId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_small"
                                android:hint="@string/email_hint"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_med" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/textView_Address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_small"
                                android:hint="@string/address_hint"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_med" />
                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_small"
                                android:layout_weight="1">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/textView_City"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/margin_small"
                                    android:hint="@string/city_hint"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/text_med" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_small"
                                android:layout_weight="1">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/textView_State"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/margin_small"
                                    android:hint="@string/state_hint"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/text_med" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/button_Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/holo_green_dark"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_lar" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:elevation="4dp"
        app:headerLayout="@layout/navigation_header"
        app:itemIconTint="@android:color/holo_green_dark"
        app:menu="@menu/drawer_menu" />

</android.support.v4.widget.DrawerLayout>