<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".activity.VerificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/layout_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorCardView"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_Back"
                android:layout_width="@dimen/btn_back_width"
                android:layout_height="@dimen/btn_back_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_med"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_med"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/button_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/screen_verification"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Logo of TAG Taxi -->
        <ImageView
            android:id="@+id/imageView_Logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_below="@id/layout_Toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_med"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/tag_logo" />

        <!-- Layout for User Phone Number / Password / Sign In Button -->
        <LinearLayout
            android:id="@+id/layout_SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_Logo"
            android:layout_marginBottom="@dimen/margin_vlar"
            android:layout_marginEnd="@dimen/margin_med"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginRight="@dimen/margin_med"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_lar"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_med"
                android:layout_marginLeft="@dimen/margin_med"
                android:layout_marginRight="@dimen/margin_med"
                android:layout_marginStart="@dimen/margin_med"
                android:layout_marginTop="@dimen/margin_med"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textView_CountryCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:enabled="false"
                        android:inputType="phone"
                        android:maxLength="3"
                        android:text="@string/country_code"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_med" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textView_PhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:hint="@string/user_number_hint"
                        android:inputType="phone"
                        android:enabled="false"
                        android:maxLength="10"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_med" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_med"
                    android:layout_marginLeft="@dimen/margin_med"
                    android:layout_marginRight="@dimen/margin_med"
                    android:layout_marginStart="@dimen/margin_med"
                    android:layout_weight="1"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textView_OTP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_small"
                        android:hint="@string/otp_hint"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_med" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_Resend"
                    android:layout_width="@dimen/btn_resend_width"
                    android:layout_height="@dimen/btn_resend_height"
                    android:layout_marginBottom="@dimen/margin_lar"
                    android:layout_marginEnd="@dimen/margin_lar"
                    android:layout_marginLeft="@dimen/margin_lar"
                    android:layout_marginRight="@dimen/margin_lar"
                    android:layout_marginStart="@dimen/margin_lar"
                    android:layout_marginTop="@dimen/margin_med"
                    android:background="@drawable/button_gray_bg"
                    android:text="@string/resend"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_med" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_Confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_blue_bg_flat"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_title" />

    </RelativeLayout>
</ScrollView>